# imac-5k-control

./: .gitignore  Cargo.toml  README.md  rust-toolchain.toml
.cargo/: config.toml
docs/: BOARD_INFO.md  DISPLAY_BOARD_STATE_MACHINE.md  HEAP_ALLOCATOR_PLAN.md  RECLAIMED_RAM.md
src/: ds18b20.rs  futures.rs  ioexpander.rs  main.rs  mcp23009.rs  memlog.rs  onewire.rs  pinouts.rs  power.rs  state.rs  task.rs  types.rs
src/driver/: mcp23009.rs  mod.rs
src/task/: buzzer.rs  case_button.rs  display_board.rs  display_control.rs  display_state.rs  fan_control.rs  fan_duty.rs  httpd.rs  mod.rs  mqtt.rs  net.rs  net_monitor.rs  pin_control.rs  power_relay.rs  safety.rs  serial_console.rs  serial_tui.rs  temp_sensor.rs  wifi.rs
