[package]
edition = "2024"
name = "imac-5k-control"
version = "0.6.2"
authors = ["Andre Braga Reis <andre@saltwing.com>"]
publish = false

[[bin]]
name = "imac-5k-control"
path = "src/main.rs"
test = false
bench = false
doctest = false

[dependencies]
critical-section = "1.2.0"
embassy-embedded-hal = "0.5.0"
# Enabling nightly statically allocates the tasks, no arena is used.
embassy-executor = { version = "0.9.1", features = ["nightly"] }
embassy-futures = "0.1.1"
embassy-net = { version = "0.8.0", features = [
    "dhcpv4",
    "medium-ethernet",
    "tcp",
    "udp",
    "dns",
    "icmp",
] }
embassy-sync = "0.7.0"
embassy-time = "0.5.0"


# esp-alloc = "0.9.0"
# esp-bootloader-esp-idf = { version = "0.4.0", features = ["esp32c6"] }
# esp-hal = { version = "1.0.0", features = ["esp32c6", "unstable"] }
# esp-radio = { version = "0.17.0", features = [ "esp-alloc", "esp32c6", "unstable", "wifi"] }
# esp-rtos = { version = "0.2.0", features = ["esp32c6", "embassy", "esp-radio", "esp-alloc"] }

# [Jan 28] · e7b663a · Make sure .flash_desc and .rodata are merged by the tooling (#4844)
# [Feb  6] · 187a78d · Fix some UART-related issues (#4586) (#4852)
# [Feb 17] · 747aa89 · Place SPI and UART async interrupt handlers into RAM (#4988)
esp-alloc = { git = "https://github.com/esp-rs/esp-hal", rev = "747aa89" }
esp-bootloader-esp-idf = { git = "https://github.com/esp-rs/esp-hal", rev = "747aa89", features = ["esp32c6"] }
esp-hal = { git = "https://github.com/esp-rs/esp-hal", rev = "747aa89", features = ["esp32c6", "unstable"] }
esp-radio = { git = "https://github.com/esp-rs/esp-hal", rev = "747aa89", features = [ "esp-alloc", "esp32c6", "unstable", "wifi"] }
esp-rtos = { git = "https://github.com/esp-rs/esp-hal", rev = "747aa89", features = ["esp32c6", "embassy", "esp-radio", "esp-alloc"] }


esp-backtrace = { version = "0.18.1", features = [
    "esp32c6",
    "panic-handler",
    "println",
] }
esp-println = { version = "0.16.1", default-features = false, features = [
    "colors",
    "critical-section",
    "esp32c6",
    # Force JTAG output even if USB is not connected, otherwise it clobbers UART0.
    "jtag-serial",
] }

##
const_format = { version = "0.2.34", features = ["rust_1_83", "fmt"] }
# esp-ds18b20 = { git = "https://code.saltwing.com/abreis/esp-ds18b20.git", tag = "v1.0.0" }
# esp-onewire = { git = "https://code.saltwing.com/abreis/esp-onewire.git", tag = "v1.0.0" }
esp-ds18b20 = { path = "vendor/esp-ds18b20" }
esp-onewire = { path = "vendor/esp-onewire" }

# Note: can't bump to 0.9 before serde-json-core, mountain-mqtt, esp-net upgrade too
heapless = "0.8"
# Note: v0.3.0 is available but not published on crates.io
# mountain-mqtt = { version = "0.2.0", features = ["embedded-io-async", "embedded-hal-async"], default-features = false }
mountain-mqtt = { path = "./vendor/mountain-mqtt/mountain-mqtt", features = ["embedded-io-async", "embedded-hal-async"], default-features = false }
noline = { version = "0.5.1", features = ["alloc"] }
picoserve = { version = "0.18.0", features = ["alloc", "embassy"] }
pid = "4.0.0"
serde-json-core = "0.6.0"
serde = { version = "1.0.219", default-features = false, features = ["derive"] }
embassy-infinite-futures = { git = "https://code.saltwing.com/abreis/embassy-infinite-futures.git", tag = "v1.0.0"}
# for the mcp23009 driver only
thiserror = { version = "2.0.18", default-features = false }
ratatui-core = { version = "0.1.0", default-features = false }
ratatui-widgets = { version = "0.3.0", default-features = false }
ratatui-serial = { git = "https://code.saltwing.com/abreis/ratatui-serial.git", tag = "0.4.3" }

# Direct the esp-onewire dependency on esp-ds18b20 to our local gitlab
# [patch."https://github.com/abreis/esp-onewire"]
# esp-onewire = { git = "https://code.saltwing.com/abreis/esp-onewire.git", tag = "v1.0.0" }

[profile.dev]
opt-level = "s"

[profile.release]
# LLVM can perform better optimizations using a single thread.
codegen-units = 1
# Amount of debug information included, reduce if low on space.
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
# opt-level 2 or 3 is required for WiFi.
# opt-level 3 codegen is sometimes bonkers.
# opt-level 's' optimized for size.
opt-level = 2
overflow-checks = false
